--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,15 @@
     <title>huddle-landing-page-with-curved-sections</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="header__top">
-        <img class="logo" src="./assets/images/logo.svg" alt="logo" />
+        <img class="logo--top" src="./assets/images/logo.svg" alt="logo" />
         <a class="button button--ghost" href="#">Try it Free</a>
       </div>
       <div class="header__info">
         <h1 class="title">Build The Community Your Fans Will Love</h1>
         <p class="text">
-          Huddle re-imagines the way we buildz communities. You have a voice,
+          Huddle re-imagines the way we build communities. You have a voice,
           but so does your audience. Create connections with your users as you
           engage in genuine discussion.
         </p>
@@ -38,7 +38,7 @@
         alt=""
       />
     </header>
-    <main>
+    <main class="main">
       <div class="info">
         <img
           class="info__icon"
@@ -113,7 +113,7 @@
         </div>
       </div>
       <section class="footer__section">
-        <img class="logo" src="./assets/images/logo.svg" alt="icon" />
+        <img class="logo--footer" src="./assets/images/logo.svg" alt="icon" />
         <p class="text text--bold">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla
           quam, hendrerit lacinia vestibulum a, ultrices quis sem.
