--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
       <div class="header__info">
         <h1 class="title">Build The Community Your Fans Will Love</h1>
         <p class="text">
-          Huddle re-imagines the way we build communities. You have a voice,
-          but so does your audience. Create connections with your users as you
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
           engage in genuine discussion.
         </p>
         <a class="button button--pink" href="#">Get Started For Free</a>
@@ -39,36 +39,40 @@
       />
     </header>
     <main class="main">
-      <div class="info">
-        <img
-          class="info__icon"
-          src="./assets/images/icon-communities.svg"
-          alt="icon"
-        />
-        <span class="text text--xl">1.4k+</span>
-        <p class="text--m">Communities Formed</p>
+      <div class="info__container">
+        <div class="info">
+          <img
+            class="info__icon"
+            src="./assets/images/icon-communities.svg"
+            alt="icon"
+          />
+          <span class="text text--xl">1.4k+</span>
+          <p class="text--m">Communities Formed</p>
+        </div>
+        <div class="info">
+          <img
+            class="info__icon"
+            src="./assets/images/icon-messages.svg"
+            alt="icon"
+          />
+          <span class="text text--xl">2.7m+</span>
+          <p class="text--m">Messages Sent</p>
+        </div>
       </div>
-      <div class="info">
-        <img
-          class="info__icon"
-          src="./assets/images/icon-messages.svg"
-          alt="icon"
-        />
-        <span class="text text--xl">2.7m+</span>
-        <p class="text--m">Messages Sent</p>
-      </div>
-      <article class="article">
+      <article class="article article--background">
         <img
           class="article__image"
           src="./assets/images/illustration-grow-together.svg"
           alt="image"
         />
-        <h2 class="title title--s">Grow Together</h2>
-        <p class="text">
-          Generate meaningful discussions with your audience and build a strong,
-          loyal community. Think of the insightful conversations you miss out on
-          with a feedback form.
-        </p>
+        <div class="article__text">
+          <h2 class="title title--s">Grow Together</h2>
+          <p class="text">
+            Generate meaningful discussions with your audience and build a
+            strong, loyal community. Think of the insightful conversations you
+            miss out on with a feedback form.
+          </p>
+        </div>
       </article>
       <article class="article">
         <img
@@ -76,24 +80,29 @@
           src="./assets/images/illustration-flowing-conversation.svg"
           alt="image"
         />
-        <h2 class="title title--s">Flowing Conversations</h2>
-        <p class="text">
-          You wouldn't paginate a conversation in real life, so why do it
-          online? Our threads have just-in-time loading for a more natural flow.
-        </p>
+        <div class="article__text">
+          <h2 class="title title--s">Flowing Conversations</h2>
+          <p class="text">
+            You wouldn't paginate a conversation in real life, so why do it
+            online? Our threads have just-in-time loading for a more natural
+            flow.
+          </p>
+        </div>
       </article>
-      <article class="article">
+      <article class="article article--color">
         <img
           class="article__image"
           src="./assets/images/illustration-your-users.svg"
           alt="image"
         />
-        <h2 class="title title--s">Your Users</h2>
-        <p class="text">
-          It takes no time at all to integrate Huddle with your app's
-          authentication solution. This means, once signed in to your app, your
-          users can start chatting immediately.
-        </p>
+        <div class="article__text">
+          <h2 class="title title--s">Your Users</h2>
+          <p class="text">
+            It takes no time at all to integrate Huddle with your app's
+            authentication solution. This means, once signed in to your app,
+            your users can start chatting immediately.
+          </p>
+        </div>
       </article>
       <div class="cta">
         <h2 class="title title--xl">Ready To Build Your Community?</h2>
@@ -109,7 +118,11 @@
         </p>
         <div class="form">
           <input class="form__input" type="email" name="email" />
-          <input class="button button--pink" type="submit" value="Suscribe" />
+          <input
+            class="button button--rectangle"
+            type="submit"
+            value="Suscribe"
+          />
         </div>
       </div>
       <section class="footer__section">
@@ -136,26 +149,30 @@
             <p class="text text--white">example@company.com</p>
           </div>
         </div>
+        <div class="social-media">
+          <a class="sm-icon" href="#">
+            <img
+              class="sm-img"
+              src="./assets/images/post-facebook.svg"
+              alt="sm"
+            />
+          </a>
+          <a class="sm-icon" href="#">
+            <img
+              class="sm-img"
+              src="./assets/images/glyph-logo_May2016.svg"
+              alt="sm"
+            />
+          </a>
+          <a class="sm-icon" href="#">
+            <img
+              class="sm-img"
+              src="./assets/images/post-twitter.svg"
+              alt="sm"
+            />
+          </a>
+        </div>
       </section>
-      <div class="social-media">
-        <a class="sm-icon" href="#">
-          <img
-            class="sm-img"
-            src="./assets/images/post-facebook.svg"
-            alt="sm"
-          />
-        </a>
-        <a class="sm-icon" href="#">
-          <img
-            class="sm-img"
-            src="./assets/images/glyph-logo_May2016.svg"
-            alt="sm"
-          />
-        </a>
-        <a class="sm-icon" href="#">
-          <img class="sm-img" src="./assets/images/post-twitter.svg" alt="sm" />
-        </a>
-      </div>
     </footer>
     <script type="module" src="./js/index.js"></script>
   </body>
