--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           <p class="text--m">Messages Sent</p>
         </div>
       </div>
-      <article class="article article--background">
+      <article class="article article--background article--reverse">
         <img
           class="article__image"
           src="./assets/images/illustration-grow-together.svg"
@@ -89,7 +89,7 @@
           </p>
         </div>
       </article>
-      <article class="article article--color">
+      <article class="article article--color article--reverse">
         <img
           class="article__image"
           src="./assets/images/illustration-your-users.svg"
@@ -114,7 +114,7 @@
         <h3 class="title title--xs">NEWSLETTER</h3>
         <p class="text text--bold">
           To recieve tips on how to grow your community, sign up to our weekly
-          newsletter. We’ll never send you spam or pass on your email address
+          newsletter. We’ll never send you spam or pass on your email address.
         </p>
         <div class="form">
           <input class="form__input" type="email" name="email" />
@@ -126,7 +126,11 @@
         </div>
       </div>
       <section class="footer__section">
-        <img class="logo--footer" src="./assets/images/logo.svg" alt="icon" />
+        <img
+          class="logo--footer"
+          src="./assets/images/logo-footer.svg"
+          alt="icon"
+        />
         <p class="text text--bold">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla
           quam, hendrerit lacinia vestibulum a, ultrices quis sem.
